Fixed dropdown options overlapping Removed options for language level A1, A2 from frontend and seeding

--- a/frontend/src/app/shared/components/dropdown/dropdown.component.sass
+++ b/frontend/src/app/shared/components/dropdown/dropdown.component.sass
@@ -49,8 +49,6 @@
 
 .dropdown-wrp
     position: absolute
-    height: 230px
-    width: 100%
     top: 51px
     left: 0px
     border-radius: 4px
@@ -59,18 +57,15 @@
     flex-direction: column
     align-items: flex-start
     gap: 5px
-    overflow-y: scroll
     z-index: 1
     background: white
     border: solid 1px $inactive-color
 
 .dropdown-item
-    height: auto
-    padding: 7px 0 0 13px
+    padding: 7px 13px 0 13px
 
 .dropdown-item-content
     width: 212px
-    height: 2.5rem
     top: 7px
     left: 1rem
     display: flex
@@ -97,7 +92,6 @@ input[type="checkbox"]:checked
 
 .dropdown-item-info
     width: 192px
-    height: 3rem
 
 .item-info-title
     width: fit-content
